# science-mini-apps

./: README.md
bump-on-tail/: BumpOnTail.cpp  BumpOnTail.h  CMakeLists.txt  README.md  main.cpp  ndarray.h  plot.py
